--- a/index.html
+++ b/index.html
@@ -4,13 +4,53 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- <link rel="manifest" href="manifest.json" /> -->
+	<!-- ios support -->
+	<link rel="apple-touch-icon-precomposed" sizes="57x57" href="./assets/img/apple-touch-icon-57x57.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="./assets/img/apple-touch-icon-114x114.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="./assets/img/apple-touch-icon-72x72.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="./assets/img/apple-touch-icon-144x144.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="60x60" href="./assets/img/apple-touch-icon-60x60.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="120x120" href="./assets/img/apple-touch-icon-120x120.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="76x76" href="./assets/img/apple-touch-icon-76x76.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="152x152" href="./assets/img/apple-touch-icon-152x152.png" />
+	<link rel="icon" type="image/png" href="./assets/img/favicon-196x196.png" sizes="196x196" />
+	<link rel="icon" type="image/png" href="./assets/img/favicon-96x96.png" sizes="96x96" />
+	<link rel="icon" type="image/png" href="./assets/img/favicon-32x32.png" sizes="32x32" />
+	<link rel="icon" type="image/png" href="./assets/img/favicon-16x16.png" sizes="16x16" />
+	<link rel="icon" type="image/png" href="./assets/img/favicon-128.png" sizes="128x128" />
+	<meta name="application-name" content="&nbsp;" />
+	<meta name="msapplication-TileColor" content="#FFFFFF" />
+	<meta name="msapplication-TileImage" content="mstile-144x144.png" />
+	<meta name="msapplication-square70x70logo" content="mstile-70x70.png" />
+	<meta name="msapplication-square150x150logo" content="mstile-150x150.png" />
+	<meta name="msapplication-wide310x150logo" content="mstile-310x150.png" />
+	<meta name="msapplication-square310x310logo" content="mstile-310x310.png" />
+	<meta name="apple-mobile-web-app-status-bar" content="#db4938" />
+	<meta name="theme-color" content="#db4938" />
+	<link rel="icon" type="image/x-icon" href="./assets/img/favicon.ico">
 	<link rel="stylesheet" href="./style.css">
-	<title>Document</title>
+	<title>3hree</title>
 </head>
 <body>
-	<div id="board">
-		
-	</div>
+	<header>
+		<nav class="navbar">
+			<a href="#" class="logo">3hree</a>
+			<ul class="nav-links">
+				<li class="nav-link">
+					<a href="#">
+						Home
+					</a>
+				</li>
+				<li class="nav-link">
+					<a href="#">
+						Work
+					</a>
+				</li>
+			</ul>
+		</nav>
+	</header>
+	<main id="board"></main>
 	<script src="./script.js"></script>
 </body>
 </html>
