Implement score, levels. Remove unused logs, css

--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
 	<header>
 		<nav class="navbar">
 			<a href="#" class="logo">3hree</a>
+			<div id="stats">
+				<strong id="level-wrap">
+					Level: <span id="level-value"></span>
+				</strong>
+				<strong id="score-wrap">
+					Skore: <span id="score-value"></span>
+				</strong>
+			</div>
 			<ul class="nav-links">
 				<li class="nav-link">
 					<a href="#">
