--- a/index.html
+++ b/index.html
@@ -47,18 +47,13 @@
 			<ul class="nav-links">
 				<li class="nav-link">
 					<a href="#">
-						Home
-					</a>
-				</li>
-				<li class="nav-link">
-					<a href="#">
-						Work
+						Návod
 					</a>
 				</li>
 			</ul>
 		</nav>
 	</header>
-	
+
 	<main id="board"></main>
 	<script src="./script.js"></script>
 </body>
