added gyro control on mobile

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
 				<strong id="score-wrap">
 					Skore: <span id="score-value"></span>
 				</strong>
+				<strong id="goal-wrap">
+					Goal: <span id="goal-value"></span>
+				</strong>
 			</div>
 			<ul class="nav-links">
 				<li class="nav-link">
@@ -58,7 +61,11 @@
 			</ul>
 		</nav>
 	</header>
-	
+
+	<div class="container">
+		<button id="start_gyro" class="btn-success"> Start gyro </button>
+	</div>
+
 	<main id="board"></main>
 	<script src="./script.js"></script>
 </body>
