--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="sk">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!-- <link rel="manifest" href="manifest.json" /> -->
 	<!-- ios support -->
-	<link rel="apple-touch-icon-precomposed" sizes="57x57" href="./assets/img/apple-touch-icon-57x57.png" />
-	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="./assets/img/apple-touch-icon-114x114.png" />
-	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="./assets/img/apple-touch-icon-72x72.png" />
-	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="./assets/img/apple-touch-icon-144x144.png" />
-	<link rel="apple-touch-icon-precomposed" sizes="60x60" href="./assets/img/apple-touch-icon-60x60.png" />
-	<link rel="apple-touch-icon-precomposed" sizes="120x120" href="./assets/img/apple-touch-icon-120x120.png" />
-	<link rel="apple-touch-icon-precomposed" sizes="76x76" href="./assets/img/apple-touch-icon-76x76.png" />
-	<link rel="apple-touch-icon-precomposed" sizes="152x152" href="./assets/img/apple-touch-icon-152x152.png" />
+	<link rel="apple-touch-icon" sizes="57x57" href="./assets/img/apple-touch-icon-57x57.png" />
+	<link rel="apple-touch-icon" sizes="114x114" href="./assets/img/apple-touch-icon-114x114.png" />
+	<link rel="apple-touch-icon" sizes="72x72" href="./assets/img/apple-touch-icon-72x72.png" />
+	<link rel="apple-touch-icon" sizes="144x144" href="./assets/img/apple-touch-icon-144x144.png" />
+	<link rel="apple-touch-icon" sizes="60x60" href="./assets/img/apple-touch-icon-60x60.png" />
+	<link rel="apple-touch-icon" sizes="120x120" href="./assets/img/apple-touch-icon-120x120.png" />
+	<link rel="apple-touch-icon" sizes="76x76" href="./assets/img/apple-touch-icon-76x76.png" />
+	<link rel="apple-touch-icon" sizes="152x152" href="./assets/img/apple-touch-icon-152x152.png" />
 	<link rel="icon" type="image/png" href="./assets/img/favicon-196x196.png" sizes="196x196" />
 	<link rel="icon" type="image/png" href="./assets/img/favicon-96x96.png" sizes="96x96" />
 	<link rel="icon" type="image/png" href="./assets/img/favicon-32x32.png" sizes="32x32" />
@@ -30,8 +30,10 @@
 	<meta name="theme-color" content="#db4938" />
 	<link rel="icon" type="image/x-icon" href="./assets/img/favicon.ico">
 	<link rel="stylesheet" href="./style.css">
+	<link rel="manifest" href="./manifest.json" />
 	<title>3hree</title>
 </head>
+
 <body>
 	<header>
 		<nav class="navbar">
@@ -57,4 +59,5 @@
 	<main id="board"></main>
 	<script src="./script.js"></script>
 </body>
+
 </html>
