--- a/index.html
+++ b/index.html
@@ -60,10 +60,18 @@
 	</header>
 
 	<div class="container">
-		<button id="start_gyro" class="btn-success"> Start gyro </button>
+		<button id="start-gyro" class="btn-success"> Start gyro </button>
+		<button id="show-hint" class="btn-success"> Hint </button>
 	</div>
 
 	<main id="board"></main>
+
+	<div class="center">
+		<div id="container-hint">
+			<h2>Nápoveda</h2>
+			<p id="hint-text"></p>
+	</div>
+
 	<script src="./script.js"></script>
 </body>
 
