--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 	<div class="container">
 		<button id="start-gyro" class="btn-success"> Start gyro </button>
 		<button id="show-hint" class="btn-success"> Hint </button>
+		<button id="show-solution" class="btn-success"> Riešenie </button>
 	</div>
 
 	<main id="board"></main>
@@ -70,9 +71,13 @@
 		<div id="container-hint">
 			<h2>Nápoveda</h2>
 			<p id="hint-text"></p>
-	</div>
+		</div>
+		<div id="container-solution">
+			<iframe id="solution" src="" width="350" height="200" title="Solution" frameborder="0"
+				allowfullscreen></iframe>
+		</div>
 
-	<script src="./script.js"></script>
+		<script src="./script.js"></script>
 </body>
 
 </html>
