--- a/index.html
+++ b/index.html
@@ -76,8 +76,21 @@
 			<iframe id="solution" src="" width="350" height="200" title="Solution" frameborder="0"
 				allowfullscreen></iframe>
 		</div>
+	</div>	
+	<div id="myModal" class="modal">
+        <span class="close button">
+          <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-x-circle" viewBox="0 0 16 16">
+            <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+            <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
+          </svg>
+        </span>
 
-		<script src="./script.js"></script>
+		<div id="modalTitle">GRATULUJEME!</div>
+        <img class="modal-content" src="./images/trophy.png" id="img01" alt="Trophy picture">
+        <div id="caption">Podarilo sa Vám prejsť cez všetkých 10 levelov!</div>
+    </div>
+
+	<script src="./script.js"></script>
 </body>
 
 </html>
